fix navbar menu not collapsing on link click

--- a/styles/location.css
+++ b/styles/location.css
@@ -1,7 +1,7 @@
 .map-container {
   height: 800px;
   width: 1000px;
-    max-width: 75%;
+    max-width: 90%;
   }
   
 .location .image-icon {
